[gd_scene load_steps=4 format=2]

[ext_resource path="res://Coloring Activity/Art1.png" type="Texture" id=1]
[ext_resource path="res://Coloring Activity/ColorablePieceShapes.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="ColorablePieceShape" type="Node2D"]
z_index = 1
script = ExtResource( 2 )

[node name="ShapeSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 11, -12, 16, -23, 6, -43, -15, -48, -36, -44, -43, -64, -30, -76, -8, -78, 17, -86, 36, -66, 51, -57, 67, -48, 73, -30, 66, -21, 80, -2, 77, 23, 59, 35, 42, 36, 50, 47, 43, 67, 18, 79, -9, 71, -26, 83, -59, 80, -72, 60, -71, 42, -81, 21, -71, -4, -58, -11, -23, -6, 0, -5 )

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
